--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -1,11 +1,24 @@
 <div class="card" style="width: 90%;">
     <div class="card-body">
-      <h1 class="card-title">{{product.title}}</h1>
-      <p class="card-price">{{product.price}}</p>
-      <p class="card-category">{{product.category}}</p>
-      <p class="card-description">{{product.description}}</p>
-      <p class="card-location">{{product.location}}</p>
-      <p class="card-status">{{product.status}}</p>
-      <p class="card-shippable">{{product.shippable}}</p>
+      <h1 class="card-title;" style="float:left">{{product.title}}</h1>
+      <h1 class="card-price;" style="float:right">{{product.price}} CHF</h1>
+      <div style="clear:left;"></div>
+      <p class="card-description">Description: {{product.description}}</p>
+      <p class="card-location">Location: {{product.location}}</p>
+      <p *ngIf="product.status == true" style="float:left">
+        This product: available / 
+      </p>
+      <p *ngIf="product.status == false" style="float:left">
+          This product: unavailable / 
+      </p>
+
+      <p *ngIf="product.shippable == true" style="float:center">
+        shippable
+      </p>
+      <p *ngIf="product.shippable == false" style="float:center">
+          unshippable
+      </p>
+      <footer class="card-category" style="float:right">{{product.category}}</footer>
     </div>
   </div>
+  
