--- a/ese2020-project-scaffolding-master/frontend/src/app/admin/admin.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/admin/admin.component.html
@@ -1,1 +1,4 @@
-<p>admin works!</p>
+<h1 style="margin-top: 10px">Products to be approved</h1>
+<div *ngFor="let product of products | async">
+  <app-product-item [product] = "product" ></app-product-item>
+</div>
