--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -24,9 +24,9 @@
           unshippable
       </p>
       <hr>
-      <button type="button" class="btn btn-md btn-info" *ngIf="userId!=product.userId" style="float:right">Buy</button>
-      <button type="button" class="btn btn-md btn-dark" *ngIf="userId==product.userId" style="float:right">Change</button>
-      <button type="button" class="btn btn-md btn-outline-danger" *ngIf="userId==product.userId" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
+      <button type="button" class="btn btn-md btn-info" *ngIf="userId!=product.userId.toString()" style="float:right">Buy</button>
+      <button type="button" class="btn btn-md btn-dark" *ngIf="userId==product.userId.toString()" style="float:right">Change</button>
+      <button type="button" class="btn btn-md btn-outline-danger" *ngIf="userId==product.userId.toString()" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
       <button type="button" class="btn btn-md btn-dark" *ngIf="admin && !product.approved" style="float:right">Approve</button>
       <button type="button" class="btn btn-md btn-outline-danger" *ngIf="admin" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
     </div>
