--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -25,9 +25,12 @@
       </p>
       <hr>
       <button type="button" class="btn btn-md btn-info" *ngIf="userId!=product.userId.toString() && userId != null" style="float:right">Buy</button>
-      <button type="button" class="btn btn-md btn-dark" *ngIf="userId==product.userId.toString()" style="float:right">Change</button>
       <button type="button" class="btn btn-md btn-outline-danger" *ngIf="userId==product.userId.toString()" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
       <button type="button" class="btn btn-md btn-dark" *ngIf="admin && !product.approved" (click)="onApprove(product.productId)" style="float:right">Approve</button>
       <button type="button" class="btn btn-md btn-outline-danger" *ngIf="admin" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
+      <button type="button" class="btn btn-md btn-dark" *ngIf="userId==product.userId.toString()" (click)="change=true" [hidden]="change" style="float:right">Change</button>
+      <div id="change" [hidden]="!change">
+        <app-product-update [product]="product"></app-product-update>
+      </div>
     </div>
   </div>
