--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-update/product-update.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-update/product-update.component.html
@@ -19,6 +19,6 @@
     </div>
     <br>
     <div>
-      <button type="button" class="btn btn-md btn-dark">Change</button>
+      <button type="button" class="btn btn-md btn-dark"(click)="onSubmit()">Change</button>
     </div>
   </form>
