--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 90%;">
+<div class="card">
     <div class="card-body">
       <h1 style="float:left">{{product.title}}</h1>
       <span *ngIf="product.approved" style="margin-left: 15px"><i class="fas fa-check-square"></i></span>
