--- a/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
@@ -48,8 +48,10 @@
 
     <mat-tab label="Open Offers">
       <h2 style="margin-top: 10px">Your Offers</h2>
-      <div *ngFor="let product of products | async">
-        <app-product-item [product] = "product"></app-product-item>
+      <div class="row">
+        <div *ngFor="let product of products | async">
+          <app-product-item [product] = "product"></app-product-item>
+        </div>
       </div>
     </mat-tab>
 
