--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
@@ -1,5 +1,8 @@
 <hr>
-<h1>Welcome {{user}}!</h1>
+<h1 style="float:left">Welcome {{user}}!</h1>
+
+  <a href="../search-UI/search-UI.component.html" style="float:right">Search</a>
+  <div style="clear:left;"></div>
 
   <h2>Popular Categories
   <div class="btn-group">
