fix routing to search-page

--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <hr>
 <h1 style="float:left">Welcome {{user}}!</h1>
 
-  <a href="../search-UI/search-UI.component.html" style="float:right">Search</a>
+  <a routerLink="/search" style="float:right">Search</a>
   <div style="clear:left;"></div>
 
   <h2>Popular Categories
