--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -1,27 +1,34 @@
-<div class="card" style="width: 90%;">
+<div class="card-group">
+  <div class="card">
     <div class="card-body">
-      <h1 style="float:left">{{product.title}}</h1>
-      <span *ngIf="product.approved" style="margin-left: 15px"><i class="fas fa-check-square"></i></span>
-      <h1 *ngIf="product.type == 'Sell'" style="float:right">{{product.price}} CHF</h1>
-      <h1 *ngIf="product.type == 'Hire'" style="float:right">{{product.price}} CHF/h</h1>
-      <h1 *ngIf="product.type == 'Lend'" style="float:right">{{product.price}} CHF/h</h1>
+      <div>
+        <h1 style="float:left; width: 300px;" class="card-title">{{product.title}}</h1>
+        <span *ngIf="product.approved" style="margin-left: 15px"><i class="fas fa-check-square"></i></span>
+      </div>
+      <div style="float: right">
+        <h1 *ngIf="product.type == 'Sell'" style="float:right">{{product.price}} CHF</h1>
+        <h1 *ngIf="product.type == 'Hire'" style="float:right">{{product.price}} CHF/h</h1>
+        <h1 *ngIf="product.type == 'Lend'" style="float:right">{{product.price}} CHF/h</h1>
+      </div>
       <div style="clear:left;"></div>
-      <p>Description: {{product.description}}</p>
-      <p>Location: {{product.location}}</p>
+      <div>
+        <p>Description: {{product.description}}</p>
+      </div>
+      <p *ngIf="product.location != ''">Location: {{product.location}}</p>
       <p *ngIf="product.status == true" style="float:left">
-          available /
+        available /
       </p>
       <p *ngIf="product.status == false" style="float:left">
-          unavailable /
+        unavailable /
       </p>
 
       <p class="card-category" style="float:right">{{product.category}}</p>
 
       <p *ngIf="product.shippable == true">
-          shippable
+        shippable
       </p>
       <p *ngIf="product.shippable == false">
-          unshippable
+        unshippable
       </p>
       <hr>
       <button type="button" class="btn btn-md btn-info" *ngIf="userId!=product.userId.toString() && userId != null" style="float:right">Buy</button>
@@ -31,10 +38,12 @@
       <button type="button" class="btn btn-md btn-dark" *ngIf="(userId==product.userId.toString() || admin)" (click)="change=true" [hidden]="change" style="float:right">Change</button>
       <div id="change" [hidden]="!change">
         <app-product-update [productTitle]="product.title"
-        [productDescription]="product.description"
-        [productPrice]="product.price.toString()"
-        [product]="product" >
+                            [productDescription]="product.description"
+                            [productPrice]="product.price.toString()"
+                            [product]="product" >
         </app-product-update>
       </div>
     </div>
   </div>
+
+</div>
