added search bar and location to searchUI

--- a/ese2020-project-scaffolding-master/frontend/src/app/search-UI/search-UI.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/search-UI/search-UI.component.html
@@ -1,1 +1,10 @@
-<h1>hallo</h1>
+<mat-card>
+    <mat-card-title>Search</mat-card-title>
+    <mat-form-field>
+        <input matInput placeholder="I'm looking for">
+    </mat-form-field>
+    <div></div>
+    <mat-form-field>
+        <input matInput placeholder="from">
+    </mat-form-field>
+</mat-card>
