--- a/ese2020-project-scaffolding-master/frontend/src/app/search-UI/search-UI.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/search-UI/search-UI.component.html
@@ -9,6 +9,7 @@
     </mat-form-field>
     <div></div>
     <h3>Price range:</h3>
+    <h5>Min:</h5>
     <mat-slider
         thumbLabel
         [displayWith]="formatLabel"
@@ -16,6 +17,7 @@
         min="1"
         max="100">
     </mat-slider>
+    <h5>Max:</h5>
     <mat-slider 
         thumbLabel
         [displayWith]="formatLabel"
