add other search tool to search-UI

--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,8 @@
 <hr>
 <h1 style="float:left">Welcome {{user}}!</h1>
-
-  <a routerLink="/search" style="float:right">Search</a>
+  <h2>
+    <a routerLink="/search" style="float:right; color: cadetblue"><i class="fas fa-search"></i> Search</a>
+  </h2>
   <div style="clear:left;"></div>
 
   <h2>Popular Categories
