--- a/ese2020-project-scaffolding-master/frontend/src/app/search-UI/search-UI.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/search-UI/search-UI.component.html
@@ -1,53 +1,17 @@
-<!--
-<mat-card>
-    <mat-card-title>Search</mat-card-title>
-    <mat-form-field>
-        <input matInput placeholder="I'm looking for">
-    </mat-form-field>
-    <div></div>
-    <mat-form-field>
-        <input matInput placeholder="from">
-    </mat-form-field>
-    <div></div>
-    <h3>Price range:</h3>
-    <h5>Min:</h5>
-    <mat-slider
-        thumbLabel
-        [displayWith]="formatLabel"
-        tickInterval="1"
-        min="1"
-        max="100">
-    </mat-slider>
-    <h5>Max:</h5>
-    <mat-slider
-        thumbLabel
-        [displayWith]="formatLabel"
-        tickInterval="1"
-        min="1"
-        max="100">
-    </mat-slider>
-    <div></div>
-    <mat-slide-toggle color="primary">Deliverable</mat-slide-toggle>
-    <button style="float:right" mat-flat-button color="primary" (click)="search()">Search</button>
-</mat-card>
--->
+<h1 style="margin-top: 10px;">Search</h1>
+<div>
+  <h5>Set filters:</h5>
+  <input type="text" [(ngModel)]="filterText"  placeholder="Search for ...">
+  <input type="text" [(ngModel)]="filterLocation" placeholder="Search for a location">
+  <input type="number" [(ngModel)]="maxPrice" placeholder="Max. Price">
+  <input type="number" [(ngModel)]="minPrice" placeholder="Min. Price">
+  <div style="margin-top: 10px">
+    <input type="checkbox" [(ngModel)]="availability" placeholder="availability">
+    <small>Check to show unshippable products.</small>
+  </div>
+</div>
 
-<input type="text" [(ngModel)]="filterText"  placeholder="Search for ..." style="margin-top: 10px">
-<input type="text" [(ngModel)]="filterLocation" placeholder="Search for ..." style="margin-top: 10px">
-<input type="number" [(ngModel)]="maxPrice" placeholder="maxPrice" style="margin-top: 10px">
-<input type="number" [(ngModel)]="minPrice" placeholder="minPrice" style="margin-top: 10px">
-<input type="checkbox" [(ngModel)]="availability" placeholder="Search for ..." style="margin-top: 10px">
-
- <!-- <ul>Locations:
-    <div class="container" *ngFor="let location of allProducts | async">
-      <ls *ngIf="location.location != ''">
-        {{location.location}}
-      </ls>
-    </div>
-  </ul>
--->
-
-<div class="row">
+<div class="row" style="margin-top: 20px;">
   <div *ngFor="let product of products | async | productfilter: filterText : filterLocation : maxPrice : minPrice : availability">
     <app-product-item [product]="product"></app-product-item>
   </div>
