--- a/ese2020-project-scaffolding-master/frontend/src/app/search-UI/search-UI.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/search-UI/search-UI.component.html
@@ -1,10 +1,26 @@
 <h1 style="margin-top: 10px;">Search</h1>
 <div>
   <h5>Set filters:</h5>
-  <input type="text" [(ngModel)]="filterText"  placeholder="Search for ...">
-  <input type="text" [(ngModel)]="filterLocation" placeholder="Search for a location">
-  <input type="number" [(ngModel)]="maxPrice" placeholder="Max. Price">
-  <input type="number" [(ngModel)]="minPrice" placeholder="Min. Price">
+  <mat-form-field>
+    <mat-label>Search for ...</mat-label>
+    <input matInput type="text" [(ngModel)]="filterText">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Search for a location</mat-label>
+    <input matInput type="text" [(ngModel)]="filterLocation">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Max. Price</mat-label>
+    <input matInput type="number" [(ngModel)]="maxPrice">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Min. Price</mat-label>
+    <input matInput type="number" [(ngModel)]="minPrice">
+  </mat-form-field>
+
   <div style="margin-top: 10px">
     <input type="checkbox" [(ngModel)]="availability" placeholder="availability">
     <small>Check to show unshippable products.</small>
