--- a/ese2020-project-scaffolding-master/frontend/src/app/search-UI/search-UI.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/search-UI/search-UI.component.html
@@ -1,6 +1,4 @@
-<h1 style="margin-top: 10px;">Search</h1>
-<div>
-  <h5>Set filters:</h5>
+<h2 style="margin-top: 10px;">Set Search filters</h2>
   <mat-form-field>
     <mat-label>Search for ...</mat-label>
     <input matInput type="text" [(ngModel)]="filterText">
@@ -22,10 +20,8 @@
   </mat-form-field>
 
   <div style="margin-top: 10px">
-    <input type="checkbox" [(ngModel)]="availability" placeholder="availability">
-    <small>Check to show unshippable products.</small>
+    <mat-slide-toggle color ="primary" [(ngModel)]="availability">Show unshippable products</mat-slide-toggle>
   </div>
-</div>
 
 <div class="row" style="margin-top: 20px;">
   <div *ngFor="let product of products | async | productfilter: filterText : filterLocation : maxPrice : minPrice : availability">
