--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -2,8 +2,8 @@
   <div class="card">
     <div class="card-body">
       <div>
-        <h1 style="float:left; width: 300px;" class="card-title">{{product.title}}</h1>
-        <span *ngIf="product.approved" style="margin-left: 15px"><i class="fas fa-check-square"></i></span>
+        <h1 style="float:left; width: 300px;" class="card-title">{{product.title}}<span *ngIf="product.approved" style="margin-left: 15px"><i class="fas fa-check-square"></i></span>
+        </h1>
       </div>
       <div style="float: right">
         <h1 *ngIf="product.type == 'Sell'" style="float:right">{{product.price}} CHF</h1>
@@ -31,15 +31,17 @@
         unshippable
       </p>
       <hr>
-      <button type="button" class="btn btn-md btn-info" *ngIf="userId!=product.userId.toString() && userId != null" (click)="onBuy()" style="float:right">Buy</button>
-      <button type="button" class="btn btn-md btn-outline-danger" *ngIf="(userId==product.userId.toString() || admin)" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
+      <button type="button" class="btn btn-md btn-info" *ngIf="userId!=product.userId.toString() && userId != null && product.status == true && !admin" (click)="onBuy()" style="float:right">Buy</button>
+      <button type="button" class="btn btn-md btn-outline-danger" *ngIf="(userId==product.userId.toString())" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
+      <button type="button" class="btn btn-md btn-outline-danger" *ngIf="(product.approved == false && admin)" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
       <button type="button" class="btn btn-md btn-dark" *ngIf="admin && !product.approved" (click)="onApprove(product.productId)" style="float:right">Approve</button>
       <!--<button type="button" class="btn btn-md btn-outline-danger" *ngIf="admin" (click)="onProductDelete(product.productId)" style="float:right">Delete</button> -->
-      <button type="button" class="btn btn-md btn-dark" *ngIf="(userId==product.userId.toString() || admin)" (click)="change=true" [hidden]="change" style="float:right">Change</button>
+      <button type="button" class="btn btn-md btn-dark" *ngIf="userId==product.userId.toString()" (click)="change=true" [hidden]="change" style="float:right">Change</button>
       <div id="change" [hidden]="!change">
         <app-product-update [productTitle]="product.title"
                             [productDescription]="product.description"
                             [productPrice]="product.price.toString()"
+                            [productStatus]="product.status"
                             [product]="product" >
         </app-product-update>
       </div>
