--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.css
@@ -8,3 +8,13 @@
 .card-category{
     color:grey;
 }
+
+.card-title{
+  height: 50px;
+}
+
+.card-description{
+  margin-top: 1rem;
+  height: 100px;
+}
+
