--- a/ese2020-project-scaffolding-master/frontend/src/app/user-registration/user-registration.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/user-registration/user-registration.component.html
@@ -62,7 +62,7 @@
 
   <mat-step [stepControl]="thirdFormGroup">
     <form [formGroup]="thirdFormGroup">
-      <ng-template matStepLabel>Fill out your information.</ng-template>
+      <ng-template matStepLabel>Fill out optional information</ng-template>
       <mat-form-field>
         <mat-label>Phone</mat-label>
         <input matInput placeholder="e.g. +41 123 45 67" formControlName="phone">
