--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -54,7 +54,7 @@
 
      </div>
       <hr>
-      <button type="button" class="btn btn-md btn-info" *ngIf="userId!=product.userId.toString() && userId != null && product.status == true && !admin" (click)="onBuy()" style="float:right">Buy</button>
+      <button type="button" class="btn btn-md btn-info" *ngIf="userId!=product.userId.toString() && userId != null && product.status == true && !admin" (click)="openPurchaseDialog()" style="float:right">Buy</button>
       <button type="button" class="btn btn-md btn-outline-danger" *ngIf="(userId==product.userId.toString())" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
       <button type="button" class="btn btn-md btn-outline-danger" *ngIf="(product.approved == false && admin)" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
       <button type="button" class="btn btn-md btn-dark" *ngIf="admin && !product.approved" (click)="onApprove(product.productId)" style="float:right">Approve</button>
