--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.css
@@ -7,6 +7,8 @@
 .icon-link{
   display: flex;
   flex-direction: column;
+  -webkit-box-align: center;
+  align-items: center;
   padding: 0px;
   border: 0px;
   margin: 0px 0.875rem;
