--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/purchase-dialog/purchase-dialog.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/purchase-dialog/purchase-dialog.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="purchaseForm" class="example-form">
+<form class="example-form">
   <div class="purchase">Confirm Purchase</div>
   <div>
     <p>{{data.title}}</p>
@@ -9,20 +9,17 @@
   <div *ngIf="data.shippable">
     <mat-form-field>
       <mat-label>Delivery Address</mat-label>
-      <input matInput type="text" formControlName="deliveryAddress" placeholder="Delivery Address">
+      <input matInput type="text" placeholder="Delivery Address" [(ngModel)]="data.deliveryAddress">
     </mat-form-field>
-    <div style="color: red" *ngIf="(deliveryAddress.invalid && deliveryAddress.touched) || deliveryAddress.dirty">
-      <small *ngIf="deliveryAddress.errors?.required" class="text.danger">Delivery Address is required</small>
-    </div>
   </div>
   <div *ngIf="data.type == 'Lend'|| data.type == 'Hire'">
     <mat-form-field>
       <mat-label>How many hours?</mat-label>
-      <input matInput type="number" min="1" max="10" formControlName="amountOfHours" value="1">
+      <input matInput type="number" min="1" max="10" value="1" [(ngModel)]="data.amountOfHours">
     </mat-form-field>
   </div>
   <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Cancel</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial [disabled]="!purchaseForm.valid">Purchase</button>
+    <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Purchase</button>
   </div>
 </form>
