--- a/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
@@ -4,23 +4,35 @@
     <div>
       <div>
         <mat-form-field appearance="fill">
-          <label>Select Type:</label>
+          <mat-label>Select Type:</mat-label>
           <mat-select matInput formControlName="productOrService">
             <mat-option value="Product">Product</mat-option>
             <mat-option value="Service">Service</mat-option>
           </mat-select>
         </mat-form-field>
 
+        <mat-form-field>
+          <input [class.is-invalid]="title.touched && title.invalid" type="text" matInput class="form-control" placeholder="Title" formControlName="title" maxlength="40">
+          <mat-hint align="end">{{title.value.length}} /40</mat-hint>
+          <mat-error *ngIf="(title.invalid && title.touched) || title.dirty || title.errors?.required" class="text.danger">Title is required</mat-error>
+        </mat-form-field>
+
         <mat-form-field [hidden]="isService()" appearance="fill">
-          <label>Do you want to ... ?</label>
+          <mat-label>Do you want to ... ?</mat-label>
           <mat-select formControlName="type">
             <mat-option value="Sell">Sell</mat-option>
             <mat-option value="Lend">Lend</mat-option>
           </mat-select>
         </mat-form-field>
 
+        <mat-form-field [hidden]="isService()">
+          <textarea [class.is-invalid]="description.touched && description.invalid"  matInput class="form-control" placeholder="Description" formControlName="description" maxlength="5000"></textarea>
+          <mat-hint align="end">{{description.value.length}} / 5000</mat-hint>
+          <mat-error *ngIf="(description.invalid && description.touched) || description.dirty || description.errors?.required" class="text.danger">Description is required</mat-error>
+        </mat-form-field>
+
         <mat-form-field appearance="fill">
-          <label>Category</label>
+          <mat-label>Choose a category</mat-label>
           <mat-select formControlName="selectedCategory">
             <mat-option *ngFor="let category of categories" value="{{category}}">
               {{category}}
@@ -28,31 +40,20 @@
           </mat-select>
         </mat-form-field>
 
-        <mat-form-field>
-          <input [class.is-invalid]="title.touched && title.invalid" type="text" matInput class="form-control" placeholder="Title" formControlName="title" #title maxlength="40">
-          <mat-hint align="end">{{title.value.length}} /40</mat-hint>
-        </mat-form-field>
-        <div style="color: red" *ngIf="(title.invalid && title.touched) || title.dirty">
-          <small *ngIf="title.errors?.required" class="text.danger">Title is required</small>
-        </div>
-
-        <mat-form-field>
-          <textarea [class.is-invalid]="description.touched && description.invalid"  matInput class="form-control" placeholder="Description" formControlName="description" #description maxlength="5000"></textarea>
+        <mat-form-field [hidden]="isProduct()">
+          <textarea [class.is-invalid]="description.touched && description.invalid"  matInput class="form-control" placeholder="Description" formControlName="description" maxlength="5000"></textarea>
           <mat-hint align="end">{{description.value.length}} / 5000</mat-hint>
+          <mat-error *ngIf="(description.invalid && description.touched) || description.dirty || description.errors?.required" class="text.danger">Description is required</mat-error>
         </mat-form-field>
-        <div style="color: red" *ngIf="(description.invalid && description.touched) || description.dirty">
-          <small *ngIf="description.errors?.required" class="text.danger">Description is required</small>
-        </div>
 
         <mat-form-field>
           <input [class.is-invalid]="price.touched && price.invalid" type="text" matInput class="form-control" placeholder="{{priceFormat()}}" formControlName="price">
+          <mat-error *ngIf="(price.invalid && price.touched) || price.dirty || price.errors?.required" class="text.danger">Price is required</mat-error>
+          <mat-error *ngIf="price.errors?.pattern">Please only enter numbers</mat-error>
         </mat-form-field>
-        <div style="color: red" *ngIf="(price.invalid && price.touched) || price.dirty">
-          <small *ngIf="price.errors?.required" class="text.danger">Price is required</small>
-        </div>
 
         <mat-form-field [hidden]="isService()" appearance="fill">
-          <label>Is delivery available?</label>
+          <mat-label>Is delivery available?</mat-label>
           <mat-select formControlName="shippable">
             <mat-option value="true">Yes</mat-option>
             <mat-option value="false">No</mat-option>
@@ -65,20 +66,11 @@
           </mat-form-field>
         </div>
 
-
-        <mat-form-field>
-          <input [class.is-invalid]="pictureLink.touched && pictureLink.invalid" type="text" matInput class="form-control" placeholder="Picture Link" formControlName="pictureLink">
-        </mat-form-field>
-        <div style="color: red" *ngIf="(pictureLink.invalid && pictureLink.touched) || pictureLink.dirty">
-          <small *ngIf="pictureLink.errors?.required" class="text.danger">Picture link is required</small>
-        </div>
-        
       </div>
     </div>
     <br>
     <div>
-      <button type = "submit" mat-flat-button color="primary" [disabled] = "!createOfferForm.valid">Publish Offer</button>
+      <button type = "submit" mat-flat-button color="primary" [disabled] = "!createOfferForm.valid">Create Offer</button>
     </div>
   </form>
 </mat-card>
-  
